--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+@import '~antd/dist/antd.css';
+@import 'styles/TopBar.css';
+@import 'styles/App.css';
+@import 'styles/Main.css';
+@import 'styles/Register.css';
+@import './styles/Login.css';
+@import './styles/TopBar.css';
+@import 'styles/AroundMarker.css';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
